--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -1,6 +1,6 @@
 .navbar_container {
   position: fixed;
-  width: 100vw;
+  width: 100%;
   height: 5vh;
   display: flex;
   justify-content: space-between;
