--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -1,6 +1,6 @@
 .navbar_container {
   position: fixed;
-  width: 100%;
+  max-width: 1500px;
   height: 5vh;
   display: flex;
   justify-content: space-between;
@@ -20,8 +20,6 @@
   z-index: 1;
   left: 0%;
   right: 0%;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .logo_white {
