--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -1,9 +1,20 @@
+.container {
+  min-height: 100vh;
+  width: 100vw;
+  padding: 4rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .more_outside_image {
   width: 800px;
   height: 450px;
   border-radius: 1rem;
   overflow: hidden;
   z-index: 0;
+  opacity: 0;
 }
 
 .about_image {
@@ -27,4 +38,15 @@
   display: flex;
   flex-direction: column;
   padding: 0 10px;
+  flex: 1;
+  opacity: 0;
+}
+
+.mobile_about_text_container {
+  display: flex;
+  flex-direction: column;
+  padding: 0 10px;
+  position: absolute;
+  z-index: 1;
+  color: white;
 }
