--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -5,6 +5,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: nowrap;
   z-index: 100;
   left: 0;
   right: 0;
