--- a/styles/contact.module.css
+++ b/styles/contact.module.css
@@ -1,3 +1,13 @@
+.container {
+  min-height: 100vh;
+  width: 100vw;
+  padding: 4rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .forms_container {
   display: flex;
   justify-content: space-around;
