--- a/styles/navbar.module.css
+++ b/styles/navbar.module.css
@@ -1,4 +1,4 @@
-.navbar_container {
+.navbarContainer {
   position: fixed;
   max-width: 1500px;
   height: 5vh;
@@ -11,7 +11,7 @@
   right: 0;
 }
 
-.mobile_navbar_container {
+.mobileNavbarContainer {
   position: fixed;
   width: 100%;
   height: 8vh;
