--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,11 +1,12 @@
 .container {
   min-height: 100vh;
-  width: 100vw;
   padding: 4rem 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100vw;
+  max-width: 1500px;
 }
 
 .background_image {
@@ -21,7 +22,9 @@
   z-index: -1;
   opacity: 50%;
   left: 0;
-  top: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .button {
@@ -43,7 +46,9 @@
   width: 100%;
   position: fixed;
   left: 0;
-  top: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
   z-index: 101;
 }
 
@@ -60,8 +65,10 @@
   color: white;
   width: 100%;
   height: 100%;
-  left: 0%;
-  right: 0%;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
   top: 58vh;
   text-align: center;
   font-weight: 600;
