--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,9 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  max-width: 2000px;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
 }
 
 a {
