--- a/styles/about.module.css
+++ b/styles/about.module.css
@@ -1,11 +1,12 @@
 .container {
   min-height: 100vh;
-  width: 100vw;
   padding: 4rem 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  width: 100%;
+  max-width: 1500px;
 }
 
 .more_outside_image {
@@ -18,12 +19,12 @@
 }
 
 .about_image {
-  width: 100%;
+  width: 90%;
   display: flex;
+  justify-content: space-evenly;
 }
 
 .mobile_about_image {
-  width: 100%;
   display: flex;
   flex-direction: column;
   position: absolute;
