--- a/styles/contact.module.css
+++ b/styles/contact.module.css
@@ -1,26 +1,26 @@
 .container {
   min-height: 100vh;
   width: 100vw;
-  padding: 4rem 0;
+  padding: 10rem 0;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
 .forms_container {
+  width: 80%;
   display: flex;
   justify-content: space-around;
 }
 
 .request_info_container {
   width: 30%;
-  height: 30vh;
+  height: 40vh;
 }
 
 .question_form_container {
   width: 50%;
-  height: 30vh;
+  height: 40vh;
 }
 
 .contact_background_image {
