--- a/styles/contact.module.css
+++ b/styles/contact.module.css
@@ -7,9 +7,28 @@
   align-items: center;
 }
 
+.mobile_container {
+  min-height: 100vh;
+  width: 100vw;
+  padding: 6rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .forms_container {
   width: 80%;
+  min-width: 1000px;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.mobile_forms_container {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
   justify-content: space-around;
 }
 
@@ -27,4 +46,11 @@
   z-index: -1;
   object-fit: cover;
   object-position: 0 -100px;
+}
+
+.mobile_contact_background_image {
+  z-index: -1;
+  object-fit: cover;
+  transform: scale("110%");
+  position: fixed;
 }
