--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -7,6 +7,7 @@
   height: 18vh;
   width: 100%;
   padding: 5rem;
+  background-color: white;
 }
 
 .mobile_footer_container {
@@ -20,6 +21,7 @@
   width: 100%;
   padding-top: 10px;
   padding: 2rem;
+  background-color: white;
 }
 
 .footer_nav {
